--- a/src/main/java/pl/edu/agh/arbeit/gui/view/MainWindowPane.fxml
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/MainWindowPane.fxml
@@ -9,7 +9,7 @@
 <AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.arbeit.gui.controler.MainWindowController">
    <children>
       <DatePicker fx:id="datePicker" layoutX="411.0" layoutY="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0" />
-      <Button fx:id="generateRaportButton" layoutX="14.0" layoutY="347.0"  style="-fx-background-color: #192f44; -fx-border-color: #f07000; -fx-border-width: 2px; -fx-border-radius: 4px" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Generate raport" textAlignment="CENTER" textFill="#f07000" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0">
+      <Button fx:id="generateReportButton" layoutX="14.0" layoutY="347.0" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Generate report" textAlignment="CENTER"  AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
