--- a/src/main/java/pl/edu/agh/arbeit/gui/view/MainWindowPane.fxml
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/MainWindowPane.fxml
@@ -6,14 +6,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.arbeit.gui.controler.MainWindowController">
+<AnchorPane fx:id="anchorPane" prefHeight="400.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.arbeit.gui.controler.MainWindowController">
    <children>
-      <DatePicker fx:id="datePicker" layoutX="411.0" layoutY="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0" />
+      <DatePicker maxWidth="120" fx:id="datePicker" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="10.0" />
       <Button fx:id="generateReportButton" layoutX="14.0" layoutY="347.0" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Generate report" textAlignment="CENTER"  AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <TextField fx:id="appNameTextField" layoutX="48.0" layoutY="99.0" prefHeight="26.0" prefWidth="166.0" />
+      <TextField fx:id="appNameTextField" layoutX="130.0" layoutY="112" prefHeight="26.0" prefWidth="166.0" />
    </children>
 </AnchorPane>
