--- a/src/main/java/pl/edu/agh/arbeit/gui/view/MainWindowPane.fxml
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/MainWindowPane.fxml
@@ -5,13 +5,21 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.ScrollPane?>
+
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.Region?>
 <AnchorPane fx:id="anchorPane" prefHeight="400.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.arbeit.gui.controler.MainWindowController">
    <children>
-      <DatePicker maxWidth="120" fx:id="datePicker" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="10.0" />
-      <Button fx:id="generateReportButton" layoutX="14.0" layoutY="347.0" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Generate report" textAlignment="CENTER"  AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Button>
+      <VBox fx:id="scrollAndButtonVBox">
+         <DatePicker maxWidth="120" fx:id="datePicker" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="10.0" />
+         <ScrollPane fx:id="appScrollPane"/>
+         <Region VBox.vgrow="SOMETIMES"/>
+         <Button fx:id="generateReportButton" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Generate report" textAlignment="CENTER" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0">
+            <font>
+               <Font name="System Bold" size="12.0" />
+            </font>
+         </Button>
+      </VBox>
    </children>
 </AnchorPane>
