config class harcodeed

--- a/src/main/java/pl/edu/agh/arbeit/gui/view/MainWindowPane.fxml
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/MainWindowPane.fxml
@@ -9,7 +9,7 @@
 
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.Region?>
-<AnchorPane fx:id="anchorPane" prefHeight="400.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.arbeit.gui.controler.MainWindowController">
+<AnchorPane fx:id="anchorPane" prefHeight="600.0" minWidth="1000.0" maxWidth="1000" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.arbeit.gui.controler.MainWindowController">
    <children>
       <VBox fx:id="scrollAndButtonVBox">
          <DatePicker maxWidth="120" fx:id="datePicker" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="10.0" />
