--- a/src/main/java/pl/edu/agh/arbeit/gui/view/ReportsPane.fxml
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/ReportsPane.fxml
@@ -8,7 +8,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane"
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.ScrollPane?>
+<AnchorPane stylesheets="@Standard.css"
             prefHeight="400.0"
             prefWidth="600.0"
             xmlns="http://javafx.com/javafx/8.0.112"
@@ -18,12 +20,13 @@
         <Label layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="57.0" text="Date from" AnchorPane.topAnchor="14.0" />
         <Label layoutX="14.0" layoutY="53.0" prefHeight="26.0" prefWidth="57.0" text="Date to" AnchorPane.topAnchor="53.0" />
         <DatePicker fx:id="dateFromPicker" layoutX="93.0" layoutY="14.0" AnchorPane.topAnchor="14.0" />
-        <TextField fx:id="pathTextField" layoutX="93.0" layoutY="131.0" prefHeight="26.0" prefWidth="174.0" AnchorPane.topAnchor="131.0"/>
         <DatePicker fx:id="dateToPicker" layoutX="93.0" layoutY="53.0" AnchorPane.topAnchor="53.0"/>
         <Label layoutX="14.0" layoutY="92.0" prefHeight="26.0" prefWidth="57.0" text="Path" AnchorPane.topAnchor="92.0"/>
-        <Label layoutX="14.0" layoutY="131.0" prefHeight="26.0" prefWidth="57.0" text="Name" AnchorPane.topAnchor="131.0"/>
-        <TextField  fx:id="nameTextField" layoutX="93.0" layoutY="92.0" prefHeight="25.0" prefWidth="174.0" AnchorPane.topAnchor="92.0"/>
-        <Separator layoutX="14.0" layoutY="170.0" prefWidth="200.0" AnchorPane.topAnchor="170.0"/>
+        <TextField  fx:id="pathTextField" layoutX="93.0" layoutY="92.0" prefHeight="25.0" prefWidth="174.0" AnchorPane.topAnchor="92.0"/>
+        <Separator layoutX="14.0" layoutY="130.0" prefWidth="200.0" AnchorPane.topAnchor="130.0"/>
+        <ScrollPane fx:id="appListScrollPane" AnchorPane.topAnchor="144.0" AnchorPane.leftAnchor="14.0">
+            <VBox fx:id="appListContent"/>
+        </ScrollPane>
         <Button fx:id="generateReportButton" layoutX="485.0" layoutY="348.0" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Generate" textAlignment="CENTER"  AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0">
              <font>
                 <Font name="System Bold" size="12.0" />
