--- a/src/main/java/pl/edu/agh/arbeit/gui/view/MainWindowPane.fxml
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/MainWindowPane.fxml
@@ -32,14 +32,14 @@
             <Font name="System Bold" size="12.0"/>
         </font>
     </Button>
-    <Button fx:id="generateReportButton1" layoutX="175.0" layoutY="528.0" minHeight="38.0" minWidth="101.0"
+    <Button fx:id="addCustomEventButton" layoutX="175.0" layoutY="528.0" minHeight="38.0" minWidth="101.0"
             mnemonicParsing="false" text="Add custom event" textAlignment="CENTER" AnchorPane.bottomAnchor="40.0"
             AnchorPane.leftAnchor="175.0">
         <font>
             <Font name="System Bold" size="12.0"/>
         </font>
     </Button>
-    <Button fx:id="generateReportButton11" layoutX="318.0" layoutY="528.0" minHeight="38.0" minWidth="101.0"
+    <Button fx:id="beginCustomEventButton" layoutX="318.0" layoutY="528.0" minHeight="38.0" minWidth="101.0"
             mnemonicParsing="false" text="Begin custom event" textAlignment="CENTER" AnchorPane.bottomAnchor="40.0"
             AnchorPane.leftAnchor="325.0">
         <font>
