--- a/src/main/java/pl/edu/agh/arbeit/gui/view/Dark.css
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/Dark.css
@@ -1,8 +1,23 @@
 .root {
-    -fx-base: rgba(60, 63, 65, 255); // dark
+    -fx-base: rgba(30, 31, 32, 255); // dark
 }
 
 .icon-arrow {
-    -fx-stroke: #6838ff;
-    -fx-fill: #6838ff;
+    -fx-stroke: #505050;
+    -fx-fill: #505050;
+}
+
+.icon-plus {
+    -fx-stroke: #505050;
+    -fx-fill: #505050;
+}
+
+.icon {
+    -fx-stroke: #505050;
+    -fx-fill: #707070;
+}
+
+.button{
+    -fx-background-color: #505050;
+    -fx-text-fill: #909090;
 }
