--- a/src/main/java/pl/edu/agh/arbeit/gui/view/ReportsPane.fxml
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/ReportsPane.fxml
@@ -24,7 +24,7 @@
         <Label layoutX="14.0" layoutY="92.0" prefHeight="26.0" prefWidth="57.0" text="Path" AnchorPane.topAnchor="92.0"/>
         <TextField  fx:id="pathTextField" layoutX="93.0" layoutY="92.0" prefHeight="25.0" prefWidth="174.0" AnchorPane.topAnchor="92.0"/>
         <Separator layoutX="14.0" layoutY="130.0" prefWidth="200.0" AnchorPane.topAnchor="130.0"/>
-        <ScrollPane fx:id="appListScrollPane" AnchorPane.topAnchor="144.0" AnchorPane.leftAnchor="14.0">
+        <ScrollPane fx:id="appListScrollPane" AnchorPane.topAnchor="144.0" AnchorPane.leftAnchor="14.0" minWidth="420.0">
             <VBox fx:id="appListContent"/>
         </ScrollPane>
         <Button fx:id="generateReportButton" layoutX="485.0" layoutY="348.0" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Generate" textAlignment="CENTER"  AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0">
