--- a/src/main/java/pl/edu/agh/arbeit/gui/view/MainWindowPane.fxml
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/MainWindowPane.fxml
@@ -2,48 +2,39 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.shape.Line?>
-<AnchorPane fx:id="anchorPane" maxWidth="1000" minWidth="1000.0" prefHeight="471.0" prefWidth="1000.0" styleClass="root"
-            stylesheets="@Standard.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="pl.edu.agh.arbeit.gui.controler.MainWindowController">
-    <FontAwesomeIconView styleClass="icon-arrow" glyphName="ARROW_CIRCLE_LEFT" size="25" AnchorPane.rightAnchor="190"
-                         AnchorPane.topAnchor="16"/>
-    <DatePicker fx:id="datePicker" maxWidth="140" AnchorPane.rightAnchor="45.0" AnchorPane.topAnchor="12.0"/>
-    <FontAwesomeIconView styleClass="icon-arrow" glyphName="ARROW_CIRCLE_RIGHT" size="25" AnchorPane.rightAnchor="16"
-                         AnchorPane.topAnchor="16"/>
-    <Line startY="50" endY="50" endX="1010"/>
+<AnchorPane fx:id="anchorPane" maxWidth="1000" minWidth="1000.0" prefHeight="471.0" prefWidth="1000.0" styleClass="root" stylesheets="@Standard.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.arbeit.gui.controler.MainWindowController">
+    <FontAwesomeIconView glyphName="ARROW_CIRCLE_LEFT" size="25" styleClass="icon-arrow" AnchorPane.rightAnchor="190" AnchorPane.topAnchor="16" />
+    <DatePicker fx:id="datePicker" maxWidth="140" AnchorPane.rightAnchor="45.0" AnchorPane.topAnchor="12.0" />
+    <FontAwesomeIconView glyphName="ARROW_CIRCLE_RIGHT" size="25" styleClass="icon-arrow" AnchorPane.rightAnchor="16" AnchorPane.topAnchor="16" />
+    <Line endX="1010" endY="50" startY="50" />
 
-    <ScrollPane fx:id="appScrollPane" prefHeight="310.0" stylesheets="@Standard.css" AnchorPane.leftAnchor="0.0"
-                AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
+    <ScrollPane fx:id="appScrollPane" prefHeight="310.0" stylesheets="@Standard.css" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
         <VBox fx:id="listContent">
         </VBox>
     </ScrollPane>
-    <Line startY="359" endY="359" endX="1010"/>
-    <Button fx:id="generateReportButton" layoutX="44.0" layoutY="530.0" minHeight="38.0" minWidth="101.0"
-            mnemonicParsing="false" text="Generate report" textAlignment="CENTER" AnchorPane.bottomAnchor="40.0"
-            AnchorPane.leftAnchor="40.0">
+    <Line endX="1010" endY="359" startY="359" />
+    <Button fx:id="generateReportButton" layoutX="44.0" layoutY="530.0" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Generate report" textAlignment="CENTER" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="40.0">
         <font>
-            <Font name="System Bold" size="12.0"/>
+            <Font name="System Bold" size="12.0" />
         </font>
     </Button>
-    <Button fx:id="addCustomEventButton" layoutX="175.0" layoutY="528.0" minHeight="38.0" minWidth="101.0"
-            mnemonicParsing="false" text="Add custom event" textAlignment="CENTER" AnchorPane.bottomAnchor="40.0"
-            AnchorPane.leftAnchor="175.0">
+    <Button fx:id="addCustomEventButton" layoutX="175.0" layoutY="528.0" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Add custom event" textAlignment="CENTER" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="175.0">
         <font>
-            <Font name="System Bold" size="12.0"/>
+            <Font name="System Bold" size="12.0" />
         </font>
     </Button>
-    <Button fx:id="beginCustomEventButton" layoutX="318.0" layoutY="528.0" minHeight="38.0" minWidth="101.0"
-            mnemonicParsing="false" text="Begin custom event" textAlignment="CENTER" AnchorPane.bottomAnchor="40.0"
-            AnchorPane.leftAnchor="325.0">
+    <Button fx:id="beginCustomEventButton" layoutX="318.0" layoutY="528.0" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Begin custom event" textAlignment="CENTER" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="325.0">
         <font>
-            <Font name="System Bold" size="12.0"/>
+            <Font name="System Bold" size="12.0" />
         </font>
     </Button>
+   <ChoiceBox fx:id="styleChoiceBox" layoutX="823.0" layoutY="416.0" prefWidth="150.0" AnchorPane.bottomAnchor="24.0" AnchorPane.rightAnchor="24.0" />
 </AnchorPane>
