--- a/src/main/java/pl/edu/agh/arbeit/gui/view/BeginCustomEventPane.fxml
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/BeginCustomEventPane.fxml
@@ -10,7 +10,7 @@
             prefHeight="400.0" prefWidth="600.0">
     <Label layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="57.0" text="Name" />
     <TextField fx:id="eventNameTextField" layoutX="72.0" layoutY="14.0" prefHeight="25.0" prefWidth="300.0" />
-    <Button fx:id="beginButton" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Add" textAlignment="CENTER" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0">
+    <Button fx:id="beginButton" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Begin" textAlignment="CENTER" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0">
         <font>
             <Font name="System Bold" size="12.0" />
         </font>
