--- a/src/main/java/pl/edu/agh/arbeit/gui/view/CustomEventsPane.fxml
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/CustomEventsPane.fxml
@@ -18,7 +18,7 @@
     <ChoiceBox fx:id="hoursToBox" layoutX="271.0" layoutY="53.0" />
     <ChoiceBox fx:id="minutesToBox" layoutX="321.0" layoutY="53.0" />
     <Label layoutX="14.0" layoutY="92.0" prefHeight="26.0" prefWidth="57.0" text="Name" />
-    <TextField layoutX="72.0" layoutY="92.0" prefHeight="25.0" prefWidth="300.0" />
+    <TextField fx:id="eventName" layoutX="72.0" layoutY="92.0" prefHeight="25.0" prefWidth="300.0" />
     <Button fx:id="addButton" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Add" textAlignment="CENTER" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0">
         <font>
             <Font name="System Bold" size="12.0" />
