--- a/src/main/java/pl/edu/agh/arbeit/gui/view/CustomEventsPane.fxml
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/CustomEventsPane.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane stylesheets="@Standard.css" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.arbeit.gui.controler.CustomEventsController">
+<AnchorPane fx:id="anchorPane" stylesheets="@Standard.css" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.arbeit.gui.controler.CustomEventsController">
     <Label layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="57.0" text="Date" />
     <DatePicker fx:id="eventDatePicker" layoutX="71.0" layoutY="14.0" prefHeight="25.0" prefWidth="300.0" />
     <Label layoutX="14.0" layoutY="53.0" prefHeight="26.0" prefWidth="57.0" text="From" />
