--- a/src/main/java/pl/edu/agh/arbeit/gui/view/SavedSuccessfullyInfoPane.fxml
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/SavedSuccessfullyInfoPane.fxml
@@ -6,12 +6,11 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="anchorPane" stylesheets="@Standard.css"
-
             xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="pl.edu.agh.arbeit.gui.controler.SavedSuccessfullyInfoController"
             prefHeight="100.0" prefWidth="450.0">
-        <Label layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="450.0" text="Report Saved Successfully" textAlignment="CENTER">
+        <Label layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="450.0" text="Report Saved Successfully" alignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <font>
                 <Font name="System" size="12.0" />
             </font>
