--- a/src/main/java/pl/edu/agh/arbeit/gui/view/AppSettingsPane.fxml
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/AppSettingsPane.fxml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<AnchorPane fx:id="anchorPane" maxHeight="356.0" maxWidth="360.0" minHeight="356.0" minWidth="360.0" prefHeight="356.0" prefWidth="360.0" stylesheets="@Standard.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.arbeit.gui.controler.AppSettingsController">
+
+<AnchorPane fx:id="anchorPane" maxHeight="356.0" maxWidth="360.0" minHeight="356.0" minWidth="360.0" prefHeight="356.0" prefWidth="360.0" stylesheets="@Standard.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.arbeit.gui.controler.AppSettingsController">
     <children>
-        <Label layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="145.0" text="Application Name:" AnchorPane.topAnchor="14.0" />
-        <Label layoutX="14.0" layoutY="67.0" prefHeight="26.0" prefWidth="129.0" text="File to track displayName:" AnchorPane.topAnchor="67.0" />
-        <Label layoutX="14.0" layoutY="116.0" prefHeight="26.0" prefWidth="121.0" text="Ping Time:" AnchorPane.topAnchor="116.0" />
+        <Label layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="145.0" styleClass="text-in-label" text="Application Name:" AnchorPane.topAnchor="14.0" />
+        <Label layoutX="14.0" layoutY="67.0" prefHeight="26.0" prefWidth="129.0" styleClass="text-in-label" text="File to track displayName:" AnchorPane.topAnchor="67.0" />
+        <Label layoutX="14.0" layoutY="116.0" prefHeight="26.0" prefWidth="121.0" styleClass="text-in-label" text="Ping Time:" AnchorPane.topAnchor="116.0" />
         <Button fx:id="cancelButton" layoutX="58.0" layoutY="304.0" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Cancel" textAlignment="CENTER">
             <font>
                 <Font name="System Bold" size="12.0" />
@@ -22,9 +26,9 @@
          </font>
       </Button>
 
-        <Label layoutX="14.0" layoutY="153.0" prefHeight="26.0" prefWidth="121.0" text="Active color:" />
-        <Label layoutX="14.0" layoutY="193.0" prefHeight="26.0" prefWidth="121.0" text="Passive color:" />
-        <Label layoutX="14.0" layoutY="233.0" prefHeight="26.0" prefWidth="121.0" text="Background color:" />
+        <Label layoutX="14.0" layoutY="153.0" prefHeight="26.0" prefWidth="121.0" styleClass="text-in-label" text="Active color:" />
+        <Label layoutX="14.0" layoutY="193.0" prefHeight="26.0" prefWidth="121.0" styleClass="text-in-label" text="Passive color:" />
+        <Label layoutX="14.0" layoutY="233.0" prefHeight="26.0" prefWidth="121.0" styleClass="text-in-label" text="Background color:" />
         <ColorPicker fx:id="activeColorPicker" layoutX="295.0" layoutY="153.0" prefHeight="31.0" prefWidth="52.0" />
         <ColorPicker fx:id="passiveColorPicker" layoutX="295.0" layoutY="193.0" prefHeight="31.0" prefWidth="52.0" />
         <ColorPicker fx:id="backgroundColorPicker" layoutX="295.0" layoutY="233.0" prefHeight="31.0" prefWidth="52.0" />
