--- a/src/main/java/pl/edu/agh/arbeit/gui/view/BeginCustomEventPane.fxml
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/BeginCustomEventPane.fxml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" stylesheets="@Standard.css" xmlns="http://javafx.com/javafx"
-
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="pl.edu.agh.arbeit.gui.controler.BeginCustomEventController"
-            prefHeight="400.0" prefWidth="600.0">
-    <Label layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="57.0" text="Name" />
-    <TextField fx:id="eventNameTextField" layoutX="72.0" layoutY="14.0" prefHeight="25.0" prefWidth="300.0" />
-    <Button fx:id="beginButton" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Begin" textAlignment="CENTER" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0">
-        <font>
-            <Font name="System Bold" size="12.0" />
-        </font>
-    </Button>
-    <Button fx:id="cancelButton" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Cancel" textAlignment="CENTER" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0">
-        <font>
-            <Font name="System Bold" size="12.0" />
-        </font>
-    </Button>
+<AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@Standard.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.arbeit.gui.controler.BeginCustomEventController">
+   <children>
+       <Label layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="57.0" styleClass="text-in-label" text="Name" />
+       <TextField fx:id="eventNameTextField" layoutX="72.0" layoutY="14.0" prefHeight="25.0" prefWidth="300.0" />
+       <Button fx:id="beginButton" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Begin" textAlignment="CENTER" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0">
+           <font>
+               <Font name="System Bold" size="12.0" />
+           </font>
+       </Button>
+       <Button fx:id="cancelButton" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Cancel" textAlignment="CENTER" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0">
+           <font>
+               <Font name="System Bold" size="12.0" />
+           </font>
+       </Button>
+   </children>
 </AnchorPane>
