--- a/src/main/java/pl/edu/agh/arbeit/gui/view/CustomEventsPane.fxml
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/CustomEventsPane.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -8,26 +12,28 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" stylesheets="@Standard.css" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.arbeit.gui.controler.CustomEventsController">
-    <Label layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="57.0" text="Date" />
-    <DatePicker fx:id="eventDatePicker" layoutX="71.0" layoutY="14.0" prefHeight="25.0" prefWidth="300.0" />
-    <Label layoutX="14.0" layoutY="53.0" prefHeight="26.0" prefWidth="57.0" text="From" />
-    <ChoiceBox fx:id="hoursFromBox" layoutX="71.0" layoutY="53.0" />
-    <ChoiceBox fx:id="minutesFromBox" layoutX="121.0" layoutY="53.0" />
-    <Label layoutX="214.0" layoutY="53.0" prefHeight="26.0" prefWidth="57.0" text="To" />
-    <ChoiceBox fx:id="hoursToBox" layoutX="271.0" layoutY="53.0" />
-    <ChoiceBox fx:id="minutesToBox" layoutX="321.0" layoutY="53.0" />
-    <Label layoutX="14.0" layoutY="92.0" prefHeight="26.0" prefWidth="57.0" text="Name" />
-    <TextField fx:id="eventName" layoutX="72.0" layoutY="92.0" prefHeight="25.0" prefWidth="300.0" />
-    <Button fx:id="addButton" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Add" textAlignment="CENTER" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0">
-        <font>
-            <Font name="System Bold" size="12.0" />
-        </font>
-    </Button>
-    <Button fx:id="cancelButton" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Cancel" textAlignment="CENTER" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0">
-        <font>
-            <Font name="System Bold" size="12.0" />
-        </font>
-    </Button>
+<AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@Standard.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.arbeit.gui.controler.CustomEventsController">
+   <children>
+       <Label layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="57.0" styleClass="text-in-label" text="Date" />
+       <DatePicker fx:id="eventDatePicker" layoutX="71.0" layoutY="14.0" prefHeight="25.0" prefWidth="300.0" />
+       <Label layoutX="14.0" layoutY="53.0" prefHeight="26.0" prefWidth="57.0" styleClass="text-in-label" text="From" />
+       <ChoiceBox fx:id="hoursFromBox" layoutX="71.0" layoutY="53.0" />
+       <ChoiceBox fx:id="minutesFromBox" layoutX="121.0" layoutY="53.0" />
+       <Label layoutX="214.0" layoutY="53.0" prefHeight="26.0" prefWidth="57.0" styleClass="text-in-label" text="To" />
+       <ChoiceBox fx:id="hoursToBox" layoutX="271.0" layoutY="53.0" />
+       <ChoiceBox fx:id="minutesToBox" layoutX="321.0" layoutY="53.0" />
+       <Label layoutX="14.0" layoutY="92.0" prefHeight="26.0" prefWidth="57.0" styleClass="text-in-label" text="Name" />
+       <TextField fx:id="eventName" layoutX="72.0" layoutY="92.0" prefHeight="25.0" prefWidth="300.0" />
+       <Button fx:id="addButton" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Add" textAlignment="CENTER" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0">
+           <font>
+               <Font name="System Bold" size="12.0" />
+           </font>
+       </Button>
+       <Button fx:id="cancelButton" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Cancel" textAlignment="CENTER" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0">
+           <font>
+               <Font name="System Bold" size="12.0" />
+           </font>
+       </Button>
+   </children>
 
 </AnchorPane>
