--- a/src/main/java/pl/edu/agh/arbeit/gui/view/MainWindowPane.fxml
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/MainWindowPane.fxml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.image.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -10,31 +16,48 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" maxWidth="1000" minWidth="1000.0" prefHeight="471.0" prefWidth="1000.0" styleClass="root" stylesheets="@Standard.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.arbeit.gui.controler.MainWindowController">
-    <!--<FontAwesomeIconView glyphName="ARROW_CIRCLE_LEFT" size="25" styleClass="icon-arrow" AnchorPane.rightAnchor="190" AnchorPane.topAnchor="16" />-->
-    <DatePicker fx:id="datePicker" maxWidth="140" AnchorPane.rightAnchor="45.0" AnchorPane.topAnchor="12.0" />
-    <!--<FontAwesomeIconView glyphName="ARROW_CIRCLE_RIGHT" size="25" styleClass="icon-arrow" AnchorPane.rightAnchor="16" AnchorPane.topAnchor="16" />-->
-    <Line endX="1010" endY="50" startY="50" />
-
-    <ScrollPane fx:id="appScrollPane" prefHeight="310.0" stylesheets="@Standard.css" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
-        <VBox fx:id="listContent">
+<AnchorPane fx:id="anchorPane" maxWidth="1000" minWidth="1000.0" prefHeight="550.0" prefWidth="1000.0" styleClass="root" stylesheets="@Standard.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.arbeit.gui.controler.MainWindowController">
+   <children>
+       <!--<FontAwesomeIconView glyphName="ARROW_CIRCLE_LEFT" size="25" styleClass="icon-arrow" AnchorPane.rightAnchor="190" AnchorPane.topAnchor="16" />-->
+       <DatePicker fx:id="datePicker" layoutX="841.0" layoutY="99.0" maxWidth="140" AnchorPane.rightAnchor="19.0" AnchorPane.topAnchor="99.0" />
+       <!--<FontAwesomeIconView glyphName="ARROW_CIRCLE_RIGHT" size="25" styleClass="icon-arrow" AnchorPane.rightAnchor="16" AnchorPane.topAnchor="16" />-->
+       <Line endX="1010" endY="50" layoutY="88.0" startY="50" stroke="#0ac2cd" />
+   
+       <ScrollPane fx:id="appScrollPane" layoutX="22.0" layoutY="139.0" prefHeight="308.0" prefWidth="957.0" styleClass="inner-scroll-pane" stylesheets="@Standard.css" AnchorPane.leftAnchor="22.0" AnchorPane.rightAnchor="21.0" AnchorPane.topAnchor="139.0">
+      <content>
+              <VBox fx:id="listContent" styleClass="inner-scroll-pane" stylesheets="@Standard.css">
         </VBox>
-    </ScrollPane>
-    <Line endX="1010" endY="359" startY="359" />
-    <Button fx:id="generateReportButton" layoutX="44.0" layoutY="530.0" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Generate report" textAlignment="CENTER" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="40.0">
-        <font>
-            <Font name="System Bold" size="12.0" />
-        </font>
-    </Button>
-    <Button fx:id="addCustomEventButton" layoutX="175.0" layoutY="528.0" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Add custom event" textAlignment="CENTER" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="175.0">
-        <font>
-            <Font name="System Bold" size="12.0" />
-        </font>
-    </Button>
-    <Button fx:id="beginCustomEventButton" layoutX="318.0" layoutY="528.0" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Begin custom event" textAlignment="CENTER" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="325.0">
-        <font>
-            <Font name="System Bold" size="12.0" />
-        </font>
-    </Button>
-   <ChoiceBox fx:id="styleChoiceBox" layoutX="823.0" layoutY="416.0" prefWidth="150.0" AnchorPane.bottomAnchor="24.0" AnchorPane.rightAnchor="24.0" />
+      </content>
+       </ScrollPane>
+       <Line endX="1010" endY="359" layoutY="89.0" startY="359" stroke="#0ac2cd" />
+       <Button fx:id="generateReportButton" layoutX="22.0" layoutY="479.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" prefWidth="135.0" text="Generate report" textAlignment="CENTER" AnchorPane.bottomAnchor="33.0" AnchorPane.leftAnchor="22.0">
+           <font>
+               <Font name="System Bold" size="12.0" />
+           </font>
+       </Button>
+       <Button fx:id="addCustomEventButton" layoutX="167.0" layoutY="479.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" prefWidth="135.0" text="Add custom event" textAlignment="CENTER" AnchorPane.bottomAnchor="33.0" AnchorPane.leftAnchor="167.0">
+           <font>
+               <Font name="System Bold" size="12.0" />
+           </font>
+       </Button>
+       <Button fx:id="beginCustomEventButton" layoutX="311.0" layoutY="479.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" prefWidth="135.0" text="Begin custom event" textAlignment="CENTER" AnchorPane.bottomAnchor="33.0" AnchorPane.leftAnchor="311.0">
+           <font>
+               <Font name="System Bold" size="12.0" />
+           </font>
+       </Button>
+      <ChoiceBox fx:id="styleChoiceBox" layoutX="836.0" layoutY="486.0" prefWidth="150.0" AnchorPane.bottomAnchor="39.0" AnchorPane.rightAnchor="14.0" />
+      <ImageView fx:id="logoImg" fitHeight="75.0" fitWidth="85.0" layoutX="457.0" layoutY="461.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="/logo_arbeit_darker_blue.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="textTopImg" fitHeight="104.0" fitWidth="407.0" layoutX="22.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
+          <image>
+              <Image url="/logo_arbeit_text.png" />
+          </image>
+      </ImageView>
+   </children>
+   <opaqueInsets>
+      <Insets />
+   </opaqueInsets>
 </AnchorPane>
