--- a/src/main/java/pl/edu/agh/arbeit/gui/view/ReportsPane.fxml
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/ReportsPane.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -7,32 +11,29 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.ScrollPane?>
-<AnchorPane fx:id="anchorPane" stylesheets="@Standard.css"
-            prefHeight="400.0"
-            prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/8.0.112"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="pl.edu.agh.arbeit.gui.controler.ReportsController">
+
+<AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@Standard.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.arbeit.gui.controler.ReportsController">
     <children>
-        <Label layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="57.0" text="Date from" AnchorPane.topAnchor="14.0" />
-        <Label layoutX="14.0" layoutY="53.0" prefHeight="26.0" prefWidth="57.0" text="Date to" AnchorPane.topAnchor="53.0" />
+        <Label layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="57.0" styleClass="text-in-label" text="Date from" AnchorPane.topAnchor="14.0" />
+        <Label layoutX="14.0" layoutY="53.0" prefHeight="26.0" prefWidth="57.0" styleClass="text-in-label" text="Date to" AnchorPane.topAnchor="53.0" />
         <DatePicker fx:id="dateFromPicker" layoutX="93.0" layoutY="14.0" AnchorPane.topAnchor="14.0" />
-        <DatePicker fx:id="dateToPicker" layoutX="93.0" layoutY="53.0" AnchorPane.topAnchor="53.0"/>
-        <Label layoutX="14.0" layoutY="92.0" prefHeight="26.0" prefWidth="57.0" text="Path" AnchorPane.topAnchor="92.0"/>
-        <TextField  fx:id="pathTextField" layoutX="93.0" layoutY="92.0" prefHeight="25.0" prefWidth="174.0" AnchorPane.topAnchor="92.0"/>
-        <Separator layoutX="14.0" layoutY="130.0" prefWidth="200.0" AnchorPane.topAnchor="130.0"/>
-        <ScrollPane fx:id="appListScrollPane" AnchorPane.topAnchor="144.0" AnchorPane.leftAnchor="14.0" minWidth="420.0">
-            <VBox fx:id="appListContent"/>
+        <DatePicker fx:id="dateToPicker" layoutX="93.0" layoutY="53.0" AnchorPane.topAnchor="53.0" />
+        <Label layoutX="14.0" layoutY="92.0" prefHeight="26.0" prefWidth="57.0" styleClass="text-in-label" text="Path" AnchorPane.topAnchor="92.0" />
+        <TextField fx:id="pathTextField" layoutX="93.0" layoutY="92.0" prefHeight="25.0" prefWidth="174.0" AnchorPane.topAnchor="92.0" />
+        <Separator layoutX="14.0" layoutY="130.0" prefWidth="200.0" AnchorPane.topAnchor="130.0" />
+        <ScrollPane fx:id="appListScrollPane" minWidth="420.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="144.0">
+           <content>
+               <VBox fx:id="appListContent" />
+           </content>
         </ScrollPane>
-        <Button fx:id="generateReportButton" layoutX="485.0" layoutY="348.0" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Generate" textAlignment="CENTER"  AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0">
+        <Button fx:id="generateReportButton" layoutX="485.0" layoutY="348.0" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Generate" textAlignment="CENTER" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0">
              <font>
                 <Font name="System Bold" size="12.0" />
              </font>
         </Button>
-        <Button fx:id="cancelButton" layoutX="14.0" layoutY="348.0" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Cancel" textAlignment="CENTER"  AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0">
+        <Button fx:id="cancelButton" layoutX="14.0" layoutY="348.0" minHeight="38.0" minWidth="101.0" mnemonicParsing="false" text="Cancel" textAlignment="CENTER" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0">
             <font>
                 <Font name="System Bold" size="12.0" />
             </font>
