--- a/src/main/java/pl/edu/agh/arbeit/gui/view/Standard.css
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/Standard.css
@@ -9,7 +9,7 @@
     -fx-fill: #497fff;
 }
 
-.trash-button, .settings-button, .icon-plus {
+.trash-button, .settings-button, .icon-plus, .date-picker-arrow {
     -fx-fill: #4ebec2;
 }
 
